--- a/ArtCuratorSpringJPAGUIRedFlix/ArtCuratorSpringJPA-GUI/src/main/resources/application.properties
+++ b/ArtCuratorSpringJPAGUIRedFlix/ArtCuratorSpringJPA-GUI/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 ! spring.datasource.password=equipo132
 
 spring.datasource.url=jdbc:mysql://localhost/redflix10?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=2320348MySQL.
+spring.datasource.username=user
+spring.datasource.password=xxxxxxxxx
