--- a/ArtCuratorSpringJPAGUIRedFlix/ArtCuratorSpringJPA-GUI/src/main/resources/application.properties
+++ b/ArtCuratorSpringJPAGUIRedFlix/ArtCuratorSpringJPA-GUI/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost/redflix10?serverTimezone=UTC
 spring.datasource.username=user
-spring.datasource.password=xxxxxxxxx
+spring.datasource.password=xxxxxx
